--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "mongodb": "^2.2.33",
+    "request": "^2.88.2",
     "swig": "^1.4.2"
   }
 }
